# backend/src/controllers/tradeController/tradeController.ts
@@ -13,21 +13,21 @@ import {
   Security,
 } from "tsoa";
 import { TradeService } from "../../services/tradeService/tradeService";
-import { ICreateTrade, ITrade } from "../../interface/interface";
+import { CalculateTradeMetricsRepository } from "../../services/tradeService/calculateMetrics";
+import { ITrade } from "../../interface/interface";
 import { ApiError } from "../../errorHandler/error";
 
 @Route("api/trades")
 @Tags("Trades")
 export class TradeController extends Controller {
   private tradeService = new TradeService();
+  private metricsService = new CalculateTradeMetricsRepository(); // Initialize metrics service
 
   @Post("create")
   @Security("jwt")
-  async createTrade(
-    @Body() trade: ICreateTrade,
-    @Request() req: any
-  ): Promise<any> {
+  async createTrade(@Body() trade: any, @Request() req: any): Promise<any> {
     try {
+      console.log(trade);
       return await this.tradeService.createTrade(req, trade);
     } catch (error) {
       console.log(error);
@@ -46,13 +46,14 @@ export class TradeController extends Controller {
   }
 
   @Get("list")
-  // @Security("jwt")
+  @Security("jwt")
   async getTrades(
     @Query() skip: number = 0,
-    @Query() limit: number = 10
+    @Query() limit: number = 10,
+    @Request() req: any
   ): Promise<any> {
     try {
-      return await this.tradeService.getTrades(skip, limit);
+      return await this.tradeService.getTrades(skip, limit, req);
     } catch (error) {
       throw new ApiError("Failed to retrieve trades", 500);
     }
@@ -92,6 +93,27 @@ export class TradeController extends Controller {
       return await this.tradeService.filterTrades(req.user, filter, limit);
     } catch (error) {
       throw new ApiError("Failed to filter trades", 500);
+    }
+  }
+
+  @Get("metrics")
+  @Security("jwt")
+  async getMetrics(@Request() req: any): Promise<any> {
+    try {
+      return await this.metricsService.calculateMetrics(req);
+    } catch (error) {
+      throw new ApiError("Failed to calculate metrics", 500);
+    }
+  }
+
+  @Get("wins-losses")
+  @Security("jwt")
+  async getWinsAndLosses(@Request() req: any): Promise<any> {
+    try {
+      return await this.metricsService.calculateWinsAndLosses(req);
+    } catch (error) {
+      console.log(error);
+      throw new ApiError("Failed to calculate wins and losses", 500);
     }
   }
 }
